Created queue methods, routes and table. Done multiple link to channel. Fixed bugs
