# api/swagger/swagger.yaml
@@ -111,27 +111,69 @@ paths:
           description: Success
           schema:
             $ref: "#/definitions/BaseResponse"
-  /new_account:
-    x-swagger-router-controller: account.controller
+  # /new_account:
+  #   x-swagger-router-controller: account.controller
+  #   get:
+  #     description: Adding row in account table with certain parameters
+  #     operationId: addAccount
+  #     parameters:
+  #       - name: name
+  #         in: query
+  #         description: account name
+  #         required: true
+  #         type: string
+  #       - name: login
+  #         in: query
+  #         description: account login
+  #         required: true
+  #         type: string
+  #       - name: phone
+  #         in: query
+  #         description: account name
+  #         required: true
+  #         type: string
+  #     responses:
+  #       "200":
+  #         description: Success
+  #         schema:
+  #           $ref: "#/definitions/BaseResponse"
+  /new_queue_item:
+    x-swagger-router-controller: addToChannelQueue.controller
     get:
-      description: Adding row in account table with certain parameters
-      operationId: addAccount
+      description: Adding row in queue table with the link
+      operationId: addToQueue
       parameters:
-        - name: name
+        - name: link
           in: query
-          description: account name
+          description: channel link
           required: true
           type: string
-        - name: login
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/BaseResponse"
+  /remove_queue_item:
+    x-swagger-router-controller: removeFromChannelQueue.controller
+    get:
+      description: Removes row from queue table with the link
+      operationId: removeFromQueue
+      parameters:
+        - name: link
           in: query
-          description: account login
+          description: channel link
           required: true
           type: string
-        - name: phone
-          in: query
-          description: account name
-          required: true
-          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/BaseResponse"
+  /queue:
+    x-swagger-router-controller: getChannelQueue.controller
+    get:
+      description: Get all queue
+      operationId: getQueue
       responses:
         "200":
           description: Success
